fix c3 tooltips using light text on a light background causing them to be invisible in dark mode https://github.com/ianknowles/graphing-app-scaffold/issues/14

--- a/server/app/assets/stylesheets/components/graphs/_figure.scss
+++ b/server/app/assets/stylesheets/components/graphs/_figure.scss
@@ -16,6 +16,10 @@ figure.map-contain {
 	font-family: "Roboto Condensed",Georgia,Times New Roman,serif;
 }
 
+.c3-tooltip {
+	color: black !important;
+}
+
 .figurecaption {
 	//@include p-2
 	//@include mb-0
